Convert the BPoint to screen coordinates respecting the scale (using ConvertToScreenForDrawing()) before drawing a BPicture, both directly and inside another BPicture. Restore the drawing origin when drawing a nested BPicture (like we already do when drawing it directly). Fixes #6008.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@37824 a95241bf-73f2-0310-859d-f6bbb57e9c96