src/servers/app/ServerPicture.cpp
@@ -4,7 +4,7 @@
  *
  * Authors:
  *		Marc Flerackers (mflerackers@androme.be)
- *		Stefano Ceccherini (burton666@libero.it)
+ *		Stefano Ceccherini (stefano.ceccherini@gmail.com)
  *		Marcus Overhagen <marcus@overhagen.de>
  */
 
@@ -515,11 +515,13 @@ draw_picture(View* view, BPoint where, int32 token)
 	ServerPicture* picture
 		= view->Window()->ServerWindow()->App()->GetPicture(token);
 	if (picture != NULL) {
+		BPoint origin = view->DrawingOrigin();
+		view->ConvertToScreenForDrawing(&where);
 		view->SetDrawingOrigin(where);
 		view->PushState();
 		picture->Play(view);
 		view->PopState();
-
+		view->SetDrawingOrigin(origin);
 		picture->ReleaseReference();
 	}
 }
